# intellij-blackconnect

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle  build.gradle.kts  detekt-config.yml  gradle.properties  pyproject.toml  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_plugin.yaml  coverage.yaml  create_sentry_release.yaml  publish_release.yaml  run_qodana.yaml  verify_plugin.yaml
config/: baseline.xml
gradle/wrapper/: gradle-wrapper.properties
src/main/java/me/lensvol/blackconnect/: BeforeCloseTabActionPromoter.kt  BeforeTabClosedAction.kt  BlackConnectConfigurable.kt  BlackConnectConfigurableProvider.kt  BlackConnectGlobalSettings.kt  BlackConnectPluginListener.java  BlackConnectProgressTracker.kt  BlackConnectProjectSettings.kt  BlackConnectSettingsConfiguration.kt  BlackConnectSettingsPanel.kt  BlackdReformatter.kt  FileSaveListener.kt  FormatUsingBlackdAction.kt  NewSettingsReminderNotification.kt  PluginStartupActivity.kt
src/main/kotlin/me/lensvol/blackconnect/: AsyncCodeFormatter.kt  BeforeTabCloseActionListener.kt  BlackConnectProgressTracker.kt  BlackPostFormatProcessor.kt  BlackdClient.kt  BlackdExecutor.kt  BlackdReformatter.kt  (+6 more)
src/main/resources/: plugin.properties
src/me/lensvol/blackconnect/: BlackConnectConfigurable.kt  BlackConnectSettingsConfiguration.kt  BlackConnectSettingsPanel.kt  FormatUsingBlackdAction.kt
src/test/kotlin/: BlackVersionComparisonTestCase.kt
src/test/testData/: broken.py  reformatted.py  unformatted.py
(+47 files in other folders)
