[tool.poetry]
name = "blackconnect-test"
version = "0.1.0"
description = "Python environment to run functional tests of intellij-blackconnect"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@jetbrains.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = {extras = ["d"], version = "^21.4b2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
