[tool.poetry]
name = "blackconnect-test"
version = "0.1.0"
description = "Python environment to run functional tests of intellij-blackconnect"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@jetbrains.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = { extras = ["d"], version = "^22.8.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
